--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -33,14 +33,17 @@
               <a href="/restaurants" class="btn btn-primary">
                 <i class="fa fa-chevron-left"></i>
               </a>
-
+               <% if current_user.id == @restaurant.user_id%>
               <a href="/restaurants/<%= @restaurant.id %>/edit" class="btn btn-warning">
                 <i class="fa fa-edit"></i>
               </a>
+              <%end%>
 
+              <% if current_user.id == @restaurant.user_id%>
               <a href="/delete_restaurant/<%= @restaurant.id %>" class="btn btn-danger" rel="nofollow">
                 <i class="fa fa-trash-o"></i>
               </a>
+              <%end%>
             </div>
           </div>
         </div>
