--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -34,13 +34,17 @@
                 <i class="fa fa-chevron-left"></i>
               </a>
 
+              <% if current_user.id == @store.user_id%>
               <a href="/stores/<%= @store.id %>/edit" class="btn btn-warning">
                 <i class="fa fa-edit"></i>
               </a>
+              <%end%>
 
+              <% if current_user.id == @store.user_id%>
               <a href="/delete_store/<%= @store.id %>" class="btn btn-danger" rel="nofollow">
                 <i class="fa fa-trash-o"></i>
               </a>
+              <%end%>
             </div>
           </div>
         </div>
